# Omni_Backrooms

./: .gitignore  build.gradle.kts  gradle.properties  gradlew  local.properties  settings.gradle.kts
.github/workflows/: build.yml  ci.yml  ci.yml.bak  release.yml
Backrooms/: build.gradle.kts  google-services.json  proguard-rules.pro
Backrooms/Source/Main/: AndroidManifest.xml
Backrooms/Source/Main/Kotlin/com/omni/backrooms/: Api_Service.kt  App.kt  Asset.kt  Asset_Repository.kt  Assets.kt  Backrooms.kt  Backrooms_Screen.kt  Changelog_Screen.kt  Credits.kt  Credits_Screen.kt  Di_Module.kt  Editor_Model.kt  Events_Screen.kt  Guard.kt  Main_Activity.kt  Maps.kt  Market.kt  Market_Screen.kt  Models.kt  Native_Bridge.kt  Room.kt  Room_Repository.kt  Room_Screen.kt  Service.kt  Session_Service.kt  Settings.kt  SettingsScreen.kt  Settings_Repository.kt  Splash_Screen.kt  Story.kt  Story_Screen.kt  Voice.kt  Voice_Chat.kt
Backrooms/Source/Main/Native/: Backrooms.cpp  CMakeLists.txt  Core.cpp  Engine.cpp  Entity.cpp  Guard.cpp  Network.cpp  Sound.cpp
Backrooms/Source/Main/assets/: story.json
Backrooms/Source/Main/res/drawable/: ic_launcher_foreground.xml
Backrooms/Source/Main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
Backrooms/Source/Main/res/values-en/: strings.xml
Backrooms/Source/Main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
Gradle/: gradle-wrapper.properties  libs.versions.toml
